Trying to avoid blue highlight tap on mobile for the switch theme button

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -60,3 +60,19 @@ body {
 p::selection {
   background-color: var(--pink-transparent);
 }
+
+button,
+textarea,
+input,
+select,
+a,
+div,
+svg {
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  -webkit-tap-highlight-color: transparent;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
